# Moodly

./: .gitignore  01.02 Бот для отслеживания эмоционального состояния Moodly.docx  01.02 Бот_для_отслеживания_эмоционального_состояния_Moodly.pptx  04.02 Бот для отслеживания эмоционального состояния Moodly.docx  04.02 Бот_для_отслеживания_эмоционального_состояния_Moodly.pptx  05.02 Бот для отслеживания эмоционального состояния Moodly.docx  05.02 Бот_для_отслеживания_эмоционального_состояния_Moodly.pptx  10.02 Бот для отслеживания эмоционального состояния Moodly.docx  10.02 Бот_для_отслеживания_эмоционального_состояния_Moodly.pptx  13.02 Бот для отслеживания эмоционального состояния Moodly.docx  29.01 Бот_для_отслеживания_эмоционального_состояния_Moodly.pptx  README.md  config.py  idef0.rsf  main.py  pyproject.copy  pyproject.toml  run.py  Бот_для_отслеживания_эмоционального_состояния_Moodly_2.pptx
app/: bot.py  config.py  database.py  handlers.py  keyboards.py  scheduler.py
app/db/: database.db  test.py
app/handlers/: register.py  settings.py  start.py  survey.py  time_picker.py
app/models/: survey.py  user.py
